--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <meta name="theme-color" content="#8A4FFF">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
+    <div id="particles-js"></div>
     <nav class="navbar">
         <div class="container">
             <div class="logo">aury</div>
