bg and scroll animation

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div id="particles-js"></div>
-    <nav class="navbar">
-        <div class="container">
+    <div class="container">
+        <nav class="navbar">
             <div class="logo">aury</div>
             <ul class="nav-links">
                 <li><a href="#about">about me</a></li>
@@ -23,10 +23,8 @@
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
-        </div>
-    </nav>
+        </nav>
 
-    <div class="container">
         <section class="hero">
             <div>
                 <h1>aury</h1>
@@ -158,6 +156,6 @@
             <p>&copy; 2025 aury. All rights reserved.</p>
         </div>
     </footer>
-    <script src="src/js/main.js"></script>
+    <script src="src/js/particles.js"></script>
 </body>
 </html>
