--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="src/js/particles.js"></script>
+    <script src="src/js/main.js"></script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -156,6 +158,5 @@
             <p>&copy; 2025 aury. All rights reserved.</p>
         </div>
     </footer>
-    <script src="src/js/particles.js"></script>
 </body>
 </html>
