--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aury - bio</title>
+    <title>aury - Music Producer & Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta name="theme-color" content="#8A4FFF">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="src/styles/main.css">
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="src/js/particles.js"></script>
-    <script src="src/js/main.js"></script>
 </head>
 <body>
-    <div id="particles-js"></div>
     <div class="container">
         <nav class="navbar">
             <div class="logo">aury</div>
@@ -32,83 +27,15 @@
                 <h1>aury</h1>
                 <p class="subtitle">Music Producer & Developer</p>
                 <div class="social-links">
-                    <a href="https://open.spotify.com/artist/DEIN_SPOTIFY_ID" class="social-icon"><i class="fab fa-spotify"></i></a>
                     <a href="https://instagram.com/auritly" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="https://soundcloud.com/DEIN_SOUNDCLOUD_NAME" class="social-icon"><i class="fab fa-soundcloud"></i></a>
                 </div>
             </div>
         </section>
 
         <section class="section" id="about">
             <h2>About Me</h2>
-            <div class="card about-card">
-                <div class="about-content">
-                    <div class="about-text">
-                        <p>Aury is an up-and-coming music producer from Germany with a focus on German rap and modern pop sounds. From a young age, he developed a strong sense for sound design and vocal processing. Working with professional gear and software like FL Studio, FabFilter, and UAD plugins, Aury is committed to mastering the craft of music production. He is currently pursuing a career as a music producer or audio engineer, continuously improving his skills in mixing, mastering, and sound creation.</p>
-                        <div class="stats">
-                            <div class="stat-item">
-                                <h4>Releases</h4>
-                                <span>0</span>
-                            </div>
-                            <div class="stat-item">
-                                <h4>Streams</h4>
-                                <span>0</span>
-                            </div>
-                            <div class="stat-item">
-                                <h4>Projects</h4>
-                                <span>20+</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section" id="skills">
-            <h2>My Skills</h2>
-            <div class="grid">
-                <div class="card skill-card">
-                    <i class="fas fa-music"></i>
-                    <h3>Music Production</h3>
-                    <ul class="skill-list">
-                        <li>FL Studio</li>
-                        <li>Vocal Processing</li>
-                        <li>Sound Design</li>
-                        <li>Mixing & Mastering</li>
-                    </ul>
-                </div>
-                <div class="card skill-card">
-                    <i class="fas fa-code"></i>
-                    <h3>Development</h3>
-                    <ul class="skill-list">
-                        <li>HTML & CSS</li>
-                        <li>JavaScript</li>
-                    </ul>
-                </div>
-                <div class="card skill-card">
-                    <i class="fas fa-paint-brush"></i>
-                    <h3>Design</h3>
-                    <ul class="skill-list">
-                        <li>UI/UX Design (learning)</li>
-                        <li>Figma (learning)</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Cover Art</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <section class="section" id="projects">
-            <h2>Current Projects</h2>
-            <div class="grid">
-                <div class="card project-card">
-                    <h3>Coming Soon</h3>
-                    <p>First release in progress - stay tuned!</p>
-                    <div class="project-tags">
-                        <span class="tag">German Rap</span>
-                        <span class="tag">Modern Pop</span>
-                    </div>
-                </div>
+            <div class="card">
+                <p>Hi, I'm aury! A passionate music producer and developer.</p>
             </div>
         </section>
 
@@ -118,13 +45,9 @@
                 <div class="contact-info">
                     <h3>Let's Work Together</h3>
                     <p>Got an exciting project? Get in touch!</p>
-                    
-                    <form id="contactForm" 
-                          action="https://formspree.io/f/xwpoydnb" 
-                          method="POST" 
-                          class="contact-form">
+                    <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                         <div class="form-group">
-                            <label for="email">Your Email</label>
+                            <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
                         
@@ -142,12 +65,6 @@
                             <i class="fas fa-paper-plane"></i> Send Message
                         </button>
                     </form>
-
-                    <div class="social-links">
-                        <a href="https://instagram.com/auritly" target="_blank" class="btn">
-                            <i class="fab fa-instagram"></i> Instagram
-                        </a>
-                    </div>
                 </div>
             </div>
         </section>
@@ -158,5 +75,7 @@
             <p>&copy; 2025 aury. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="src/js/main.js"></script>
 </body>
 </html>
