--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
                 <h1>aury</h1>
                 <p class="subtitle">Music Producer & Developer</p>
                 <div class="social-links">
-                    <a href="https://instagram.com/auritly" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://instagram.com/auritly" class="social-icon" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://soundcloud.com/yourprofile" class="social-icon" target="_blank">
+                        <i class="fab fa-soundcloud"></i>
+                    </a>
+                    <a href="https://github.com/yourprofile" class="social-icon" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
         </section>
@@ -35,7 +43,42 @@
         <section class="section" id="about">
             <h2>About Me</h2>
             <div class="card">
-                <p>Hi, I'm aury! A passionate music producer and developer.</p>
+                <p>Hi, I'm aury! A passionate music producer and developer based in Germany. I blend creative sound design with technical expertise to create unique musical experiences.</p>
+                <p>With a background in both music production and software development, I bring a unique perspective to every project. My goal is to push the boundaries of what's possible in modern music production.</p>
+            </div>
+        </section>
+
+        <section class="section" id="skills">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="card skill-card">
+                    <i class="fas fa-music"></i>
+                    <h3>Music Production</h3>
+                    <p>FL Studio, Ableton Live, Sound Design, Mixing & Mastering</p>
+                </div>
+                <div class="card skill-card">
+                    <i class="fas fa-code"></i>
+                    <h3>Development</h3>
+                    <p>HTML, CSS, JavaScript, Modern Web Technologies</p>
+                </div>
+                <div class="card skill-card">
+                    <i class="fas fa-desktop"></i>
+                    <h3>Digital Audio</h3>
+                    <p>VST Plugins, Audio Processing, MIDI Production</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section" id="projects">
+            <h2>Projects</h2>
+            <div class="card">
+                <h3>Coming Soon</h3>
+                <p>Exciting new releases in the works. Stay tuned!</p>
+                <ul>
+                    <li>Modern German Rap Productions</li>
+                    <li>Experimental Sound Design</li>
+                    <li>Collaborative Projects</li>
+                </ul>
             </div>
         </section>
 
