--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#clothing">Clothing</a></li>
                 <li><a href="#shoes">Shoes</a></li>
                 <li><a href="#accessories">Accessories</a></li>
-                <li><a href="#cart" class="cart-icon">
+                <li><a href="#" class="cart-icon">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="cart-count">0</span>
                 </a></li>
@@ -102,13 +102,13 @@
         </div>
     </footer>
 
-    <div class="cart-sidebar" id="cart">
+    <div class="cart-sidebar">
         <div class="cart-header">
             <h3>Shopping Cart</h3>
-            <button class="close-cart"><i class="fas fa-times"></i></button>
+            <button class="close-cart">&times;</button>
         </div>
         <div class="cart-items">
-            <!-- Cart items will be added here dynamically -->
+            <!-- Cart items will be added here -->
         </div>
         <div class="cart-footer">
             <div class="cart-total">
