--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
             <button class="close-cart">&times;</button>
         </div>
         <div class="cart-items">
-            <!-- Cart items will be added here -->
+            <!-- Cart items will be added here dynamically -->
         </div>
         <div class="cart-footer">
             <div class="cart-total">
                 <span>Total:</span>
                 <span class="total-amount">€0.00</span>
             </div>
-            <button class="btn checkout-btn">Checkout</button>
+            <button class="checkout-btn">Checkout</button>
         </div>
     </div>
 
