--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#clothing">Clothing</a></li>
                 <li><a href="#shoes">Shoes</a></li>
                 <li><a href="#accessories">Accessories</a></li>
-                <li><a href="#" class="cart-icon">
+                <li><a href="javascript:void(0)" class="cart-icon">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="cart-count">0</span>
                 </a></li>
