--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
                 <li><a href="#clothing">Clothing</a></li>
                 <li><a href="#shoes">Shoes</a></li>
                 <li><a href="#accessories">Accessories</a></li>
-                <li><a href="javascript:void(0)" class="cart-icon">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-count">0</span>
-                </a></li>
+                <li>
+                    <!-- Wichtig: Änderung hier -->
+                    <button class="cart-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="cart-count">0</span>
+                    </button>
+                </li>
             </ul>
         </div>
     </nav>
