--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
                 <li><a href="#shoes">Shoes</a></li>
                 <li><a href="#accessories">Accessories</a></li>
                 <li>
-                    <!-- Wichtig: Änderung hier -->
-                    <button class="cart-icon">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="cart-count">0</span>
-                    </button>
+                    <div class="cart-wrapper">
+                        <button type="button" class="cart-icon">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span class="cart-count">0</span>
+                        </button>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -107,18 +108,18 @@
 
     <div class="cart-sidebar">
         <div class="cart-header">
-            <h3>Shopping Cart</h3>
-            <button class="close-cart">&times;</button>
+            <h3>Your Cart</h3>
+            <button type="button" class="close-cart">&times;</button>
         </div>
         <div class="cart-items">
-            <!-- Cart items will be added here dynamically -->
+            <!-- Cart items will be added here -->
         </div>
         <div class="cart-footer">
             <div class="cart-total">
                 <span>Total:</span>
                 <span class="total-amount">€0.00</span>
             </div>
-            <button class="checkout-btn">Checkout</button>
+            <button type="button" class="checkout-btn">Checkout</button>
         </div>
     </div>
 
