--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="cart-sidebar">
         <div class="cart-header">
-            <h3>Your Cart</h3>
+            <h3>Shopping Cart</h3>
             <button type="button" class="close-cart">&times;</button>
         </div>
         <div class="cart-items">
@@ -173,6 +173,6 @@
         </div>
     </div>
 
-    <script src="src/js/main.js"></script>
+    <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
