--- a/index.html
+++ b/index.html
@@ -109,17 +109,22 @@
     <div class="cart-sidebar">
         <div class="cart-header">
             <h3>Shopping Cart</h3>
-            <button type="button" class="close-cart">&times;</button>
+            <button type="button" class="close-cart">
+                <i class="fas fa-times"></i>
+            </button>
         </div>
         <div class="cart-items">
-            <!-- Cart items will be added here -->
+            <!-- Cart items will be added here dynamically -->
         </div>
         <div class="cart-footer">
             <div class="cart-total">
                 <span>Total:</span>
                 <span class="total-amount">€0.00</span>
             </div>
-            <button type="button" class="checkout-btn">Checkout</button>
+            <button type="button" class="checkout-btn">
+                <i class="fas fa-shopping-bag"></i>
+                Checkout
+            </button>
         </div>
     </div>
 
