--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         </div>
     </div>
 
-    <script type="module" src="src/js/main.js"></script>
+    <script src="src/js/main.js"></script>
+    <script src="src/js/cart.js"></script>
 </body>
 </html>
