--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="src/styles/main.css">
+    <script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID&currency=EUR"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -121,10 +122,7 @@
                 <span>Total:</span>
                 <span class="total-amount">€0.00</span>
             </div>
-            <button type="button" class="checkout-btn">
-                <i class="fas fa-shopping-bag"></i>
-                Checkout
-            </button>
+            <div id="paypal-button-container"></div>
         </div>
     </div>
 
