--- a/index.html
+++ b/index.html
@@ -110,12 +110,10 @@
     <div class="cart-sidebar">
         <div class="cart-header">
             <h3>Shopping Cart</h3>
-            <button type="button" class="close-cart">
-                <i class="fas fa-times"></i>
-            </button>
+            <button type="button" class="close-cart">&times;</button>
         </div>
         <div class="cart-items">
-            <!-- Cart items will be added here dynamically -->
+            <!-- Cart items will be added here -->
         </div>
         <div class="cart-footer">
             <div class="cart-total">
