--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dein Name – Bio</title>
+  <title>Aury</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css.css">
 </head>
@@ -11,9 +11,9 @@
   <main>
     <section class="bio-card">
       <img src="profile.jpg" alt="Portrait" class="bio-img">
-      <h1 id="bio-name">Dein Name</h1>
+      <h1 id="bio-name">Aury</h1>
       <h2 id="bio-title">Digital Creator</h2>
-      <p id="bio-desc">Kreativität trifft Struktur.<br>Minimalismus, Code, Design.</p>
+      <p id="bio-desc">leck<br>Minimalismus, Code, Design.</p>
       <button id="fun-btn">Sag Hallo 👋</button>
       <div class="bio-links">
         <a href="mailto:dein@email.de" aria-label="E-Mail">
