--- a/index.html
+++ b/index.html
@@ -44,14 +44,32 @@
     <div class="loading" id="loading">
         <div class="loading-container">
             <div class="loading-logo">
-                <div class="logo-c">C</div>
-                <div class="logo-particles"></div>
+                <div class="logo-aury">
+                    <span class="logo-letter">a</span>
+                    <span class="logo-letter">u</span>
+                    <span class="logo-letter">r</span>
+                    <span class="logo-letter">y</span>
+                </div>
+                <div class="logo-glow">aury</div>
+                <div class="logo-particles">
+                    <div class="particle"></div>
+                    <div class="particle"></div>
+                    <div class="particle"></div>
+                    <div class="particle"></div>
+                    <div class="particle"></div>
+                    <div class="particle"></div>
+                </div>
+                <div class="logo-rings">
+                    <div class="loading-ring ring-1"></div>
+                    <div class="loading-ring ring-2"></div>
+                    <div class="loading-ring ring-3"></div>
+                </div>
             </div>
             <div class="loading-text">
-                <span class="loading-line">Initializing cer.exe</span>
+                <span class="loading-line">Initializing aury.exe</span>
                 <span class="loading-line">Loading neural networks...</span>
                 <span class="loading-line">Connecting to the matrix...</span>
-                <span class="loading-line">Welcome to my world</span>
+                <span class="loading-line">Welcome to aury's world</span>
             </div>
             <div class="loading-progress">
                 <div class="progress-fill"></div>
