index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                         </h1>
                         
                         <div class="profile-bio">
-                            <p class="bio-line">🎵 <span class="typewriter" data-text="Music fuels my creativity"></span></p>
-                            <p class="bio-line">💻 <span class="typewriter" data-text="Code brings my visions to life"></span></p>
+                            <p class="bio-line">🎵 <span class="typewriter" data-text="Music fuels me"></span></p>
+                            <p class="bio-line">💻 <span class="typewriter" data-text="Code brings me to life"></span></p>
                             <p class="bio-line">🚀 <span class="typewriter" data-text="Innovation drives my purpose"></span></p>
                         </div>
 
