--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 
                 <div class="music-info">
                     <div class="music-artwork">
-                        <img src="https://img.youtube.com/vi/w-q6oZGZ2Bo/maxresdefault.jpg" alt="Antalya" class="artwork-img">
+                        <img src="https://img.youtube.com/vi/k6xFjFXji7A/maxresdefault.jpg" alt="Laufen" class="artwork-img">
                         <div class="artwork-overlay">
                             <button class="play-btn" id="playBtn">
                                 <span class="play-icon">▶️</span>
@@ -184,15 +184,15 @@
                     </div>
                     
                     <div class="track-details">
-                        <h3 class="track-title">Antalya</h3>
-                        <p class="track-artist">Amo & Che Salah</p>
+                        <h3 class="track-title">Laufen</h3>
+                        <p class="track-artist">01099, Gustav, Zachi</p>
                         <div class="track-progress">
                             <div class="progress-bar">
                                 <div class="progress-fill"></div>
                             </div>
                             <div class="progress-time">
                                 <span id="currentTime">0:00</span>
-                                <span id="totalTime">3:42</span>
+                                <span id="totalTime">2:31</span>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                         id="ytplayer" 
                         width="0" 
                         height="0" 
-                        src="https://www.youtube.com/embed/w-q6oZGZ2Bo?enablejsapi=1&autoplay=0&controls=0&loop=1&playlist=w-q6oZGZ2Bo" 
+                        src="https://www.youtube.com/embed/k6xFjFXji7A?enablejsapi=1&autoplay=0&controls=0&loop=1&playlist=k6xFjFXji7A" 
                         frameborder="0" 
                         allow="autoplay; encrypted-media" 
                         allowfullscreen 
@@ -262,7 +262,7 @@
                     <div class="card-glow"></div>
                 </a>
 
-                <a href="https://discord.gg/cer" class="social-card discord" target="_blank" rel="noopener noreferrer">
+                <a href="https://discord.gg/mgk9pp7W6n" class="social-card discord" target="_blank" rel="noopener noreferrer">
                     <div class="card-bg"></div>
                     <div class="card-content">
                         <div class="card-icon">🎮</div>
@@ -275,7 +275,7 @@
                     <div class="card-glow"></div>
                 </a>
 
-                <a href="https://open.spotify.com/user/cer" class="social-card spotify" target="_blank" rel="noopener noreferrer">
+                <a href="https://open.spotify.com/user/31pmcvv4yxvojjwisttd63sexode?si=7f2c55c1f84543bb" class="social-card spotify" target="_blank" rel="noopener noreferrer">
                     <div class="card-bg"></div>
                     <div class="card-content">
                         <div class="card-icon">🎵</div>
@@ -288,12 +288,12 @@
                     <div class="card-glow"></div>
                 </a>
 
-                <a href="https://twitter.com/cer" class="social-card twitter" target="_blank" rel="noopener noreferrer">
+                <a href="https://x.com/Auri79852532626" class="social-card twitter" target="_blank" rel="noopener noreferrer">
                     <div class="card-bg"></div>
                     <div class="card-content">
                         <div class="card-icon">🐦</div>
                         <div class="card-info">
-                            <h3 class="card-title">Twitter</h3>
+                            <h3 class="card-title">X.com</h3>
                             <p class="card-subtitle">Thoughts & updates</p>
                         </div>
                         <div class="card-arrow">→</div>
@@ -319,11 +319,11 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-content">
-                <p>© 2025 cer - Built with 💜 and lots of ☕</p>
+                <p>© 2025 cer - Built with 💜</p>
                 <div class="footer-social">
                     <a href="https://github.com/willube" target="_blank">GitHub</a>
                     <a href="mailto:Aurijo@gmx.de">Email</a>
-                    <a href="https://discord.gg/cer" target="_blank">Discord</a>
+                    <a href="https://discord.gg/mgk9pp7W6n" target="_blank">Discord</a>
                 </div>
             </div>
         </footer>
