--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
         <div class="loading-container">
             <div class="loading-logo">
                 <div class="logo-aury">
-                    <span class="logo-letter">a</span>
-                    <span class="logo-letter">u</span>
+                    <span class="logo-letter">c</span>
+                    <span class="logo-letter">e</span>
                     <span class="logo-letter">r</span>
-                    <span class="logo-letter">y</span>
                 </div>
-                <div class="logo-glow">aury</div>
+                <div class="logo-glow">cer</div>
                 <div class="logo-particles">
                     <div class="particle"></div>
                     <div class="particle"></div>
@@ -66,10 +65,10 @@
                 </div>
             </div>
             <div class="loading-text">
-                <span class="loading-line">Initializing aury.exe</span>
-                <span class="loading-line">Loading neural networks...</span>
-                <span class="loading-line">Connecting to the matrix...</span>
-                <span class="loading-line">Welcome to aury's world</span>
+                <span class="loading-line">Initializing cer.exe</span>
+                <span class="loading-line">Loading systems...</span>
+                <span class="loading-line">Connecting...</span>
+                <span class="loading-line">Welcome to cer's world</span>
             </div>
             <div class="loading-progress">
                 <div class="progress-fill"></div>
@@ -160,26 +159,11 @@
             </div>
 
             <div class="music-player">
-                <div class="music-visualizer">
-                    <div class="visualizer-bars">
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                    </div>
-                </div>
-                
                 <div class="music-info">
                     <div class="music-artwork">
                         <img src="https://img.youtube.com/vi/k6xFjFXji7A/maxresdefault.jpg" alt="Laufen" class="artwork-img">
                         <div class="artwork-overlay">
-                            <button class="play-btn" id="playBtn">
-                                <span class="play-icon">▶️</span>
-                            </button>
+                            <button class="play-btn" id="playBtn">▶️</button>
                         </div>
                     </div>
                     
@@ -203,20 +187,6 @@
                     <button class="control-btn play-toggle" id="playToggle">▶️</button>
                     <button class="control-btn" id="nextBtn">⏭️</button>
                     <button class="control-btn" id="volumeBtn">🔊</button>
-                </div>
-
-                <!-- Hidden YouTube Player -->
-                <div class="youtube-player">
-                    <iframe 
-                        id="ytplayer" 
-                        width="0" 
-                        height="0" 
-                        src="https://www.youtube.com/embed/k6xFjFXji7A?enablejsapi=1&autoplay=0&controls=0&loop=1&playlist=k6xFjFXji7A" 
-                        frameborder="0" 
-                        allow="autoplay; encrypted-media" 
-                        allowfullscreen 
-                        style="display:none;">
-                    </iframe>
                 </div>
             </div>
         </section>
