Animations, Glow and much more

--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Aury</h1>
+  <div class="container glow-bg">
+    <header class="fade-in">
+      <h1 class="glow-text">Aury</h1>
       <p class="subtitle">Developer & Music Producer</p>
     </header>
-    <section class="bio">
-      <h2>About Me</h2>
-      <p>Hi, I'm Aury. I code and create music. My expertise includes FL Studio and Logic Pro, blending technology and creativity to build unique experiences.</p>
+    <section class="bio fade-in-up">
+      <h2 class="glow-text">About Me</h2>
+      <p>Hi, I'm Aury. I code and create music. My expertise includes <span class="glow-soft">FL Studio</span> and <span class="glow-soft">Logic Pro</span>, blending technology and creativity to build unique experiences.</p>
     </section>
-    <section class="skills">
-      <h2>Skills</h2>
+    <section class="skills fade-in-up">
+      <h2 class="glow-text">Skills</h2>
       <ul>
-        <li>Web Development (HTML, CSS, JavaScript)</li>
-        <li>Music Production (FL Studio, Logic Pro)</li>
-        <li>Sound Design & Mixing</li>
+        <li class="glow-list">Web Development (HTML, CSS, JavaScript)</li>
+        <li class="glow-list">Music Production (FL Studio, Logic Pro)</li>
+        <li class="glow-list">Sound Design & Mixing</li>
       </ul>
     </section>
-    <section class="contact">
-      <h2>Contact</h2>
+    <section class="contact fade-in-up">
+      <h2 class="glow-text">Contact</h2>
       <form id="contactForm">
-        <input type="text" id="name" name="name" placeholder="Your Name" required>
-        <input type="email" id="email" name="email" placeholder="Your Email" required>
-        <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
+        <input type="text" id="name" name="name" placeholder="Your Name" required class="input-anim">
+        <input type="email" id="email" name="email" placeholder="Your Email" required class="input-anim">
+        <textarea id="message" name="message" placeholder="Your Message" required class="input-anim"></textarea>
+        <button type="submit" class="glow-btn">Send</button>
       </form>
       <div id="formMessage"></div>
     </section>
-    <footer>
+    <footer class="fade-in">
       <p>&copy; 2025 Aury. All rights reserved.</p>
     </footer>
   </div>
