--- a/index.html
+++ b/index.html
@@ -7,35 +7,79 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container glow-bg">
-    <header class="fade-in">
-      <h1 class="glow-text">Aury</h1>
-      <p class="subtitle">Developer & Music Producer</p>
+  <div class="decor-layer">
+    <div class="orb orb-a"></div>
+    <div class="orb orb-b"></div>
+    <div class="orb orb-c"></div>
+    <div class="scanline"></div>
+  </div>
+  <div class="container shell">
+    <header class="hero reveal">
+      <div class="hero-inner">
+        <h1 class="logo-txt gradient-text">Aury</h1>
+        <p class="tag">Developer · Music Producer</p>
+        <p class="pitch">Crafting immersive web experiences & atmospheric sound. <span class="accent">FL Studio</span> & <span class="accent">Logic Pro</span> artisan blending code, rhythm, and texture.</p>
+        <div class="pill-row">
+          <span class="pill">Full‑Stack Web</span>
+          <span class="pill">FL Studio</span>
+          <span class="pill">Logic Pro</span>
+          <span class="pill">Sound Design</span>
+        </div>
+        <div class="socials">
+          <a href="#" class="social-link" aria-label="GitHub">GitHub</a>
+          <a href="#" class="social-link" aria-label="SoundCloud">SoundCloud</a>
+          <a href="#" class="social-link" aria-label="Contact">Email</a>
+        </div>
+      </div>
     </header>
-    <section class="bio fade-in-up">
-      <h2 class="glow-text">About Me</h2>
-      <p>Hi, I'm Aury. I code and create music. My expertise includes <span class="glow-soft">FL Studio</span> and <span class="glow-soft">Logic Pro</span>, blending technology and creativity to build unique experiences.</p>
-    </section>
-    <section class="skills fade-in-up">
-      <h2 class="glow-text">Skills</h2>
-      <ul>
-        <li class="glow-list">Web Development (HTML, CSS, JavaScript)</li>
-        <li class="glow-list">Music Production (FL Studio, Logic Pro)</li>
-        <li class="glow-list">Sound Design & Mixing</li>
-      </ul>
-    </section>
-    <section class="contact fade-in-up">
-      <h2 class="glow-text">Contact</h2>
-      <form id="contactForm">
-        <input type="text" id="name" name="name" placeholder="Your Name" required class="input-anim">
-        <input type="email" id="email" name="email" placeholder="Your Email" required class="input-anim">
-        <textarea id="message" name="message" placeholder="Your Message" required class="input-anim"></textarea>
-        <button type="submit" class="glow-btn">Send</button>
-      </form>
-      <div id="formMessage"></div>
-    </section>
-    <footer class="fade-in">
-      <p>&copy; 2025 Aury. All rights reserved.</p>
+    <main>
+      <section class="panel reveal" id="about">
+        <h2 class="panel-title">About</h2>
+        <p>I'm obsessed with elegant systems and evocative sound palettes. I iterate fast, ship clean, and treat every project like a hybrid track: structure, groove, contrast, release.</p>
+      </section>
+      <section class="panel grid reveal" id="skills">
+        <h2 class="panel-title">Core Stack</h2>
+        <div class="cards">
+          <div class="card">
+            <h3>Web Dev</h3>
+            <p>Semantic, accessible, performance‑minded interfaces with progressive enhancement.</p>
+          </div>
+          <div class="card">
+            <h3>Production</h3>
+            <p>Beat sculpting, arrangement, mix translation, mastering polish.</p>
+          </div>
+          <div class="card">
+            <h3>Tools</h3>
+            <p>FL Studio, Logic Pro, custom scripts, sampler layering, granular textures.</p>
+          </div>
+          <div class="card">
+            <h3>Sound Design</h3>
+            <p>Hybrid synthesis, cinematic atmospheres, transient shaping.</p>
+          </div>
+        </div>
+      </section>
+      <section class="panel reveal" id="contact">
+        <h2 class="panel-title">Contact</h2>
+        <form id="contactForm" class="form-grid" autocomplete="off" novalidate>
+          <label class="field">
+            <span>Name</span>
+            <input type="text" id="name" name="name" required class="fx-input" placeholder="Your name" />
+          </label>
+          <label class="field">
+            <span>Email</span>
+            <input type="email" id="email" name="email" required class="fx-input" placeholder="you@example.com" />
+          </label>
+          <label class="field field-full">
+            <span>Message</span>
+            <textarea id="message" name="message" rows="4" required class="fx-input" placeholder="Let's build or compose..."></textarea>
+          </label>
+          <button type="submit" class="fx-btn" data-tilt>Send Message</button>
+          <div id="formMessage" role="status" aria-live="polite"></div>
+        </form>
+      </section>
+    </main>
+    <footer class="site-foot reveal">
+      <p>&copy; 2025 Aury – Crafted with code & sound.</p>
     </footer>
   </div>
   <script src="script.js"></script>
