--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Skip to content</a>
+  <div class="page-reveal" aria-hidden="true"></div>
   <div class="decor-layer">
     <div class="orb orb-a"></div>
     <div class="orb orb-b"></div>
