--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           </div>
         </div>
         <p class="tag" aria-label="Roles">Developer · Music Producer</p>
-        <p class="pitch">Crafting immersive web experiences & atmospheric sound. <span class="accent">FL Studio</span> & <span class="accent">Logic Pro</span> artisan blending code, rhythm, and texture.</p>
+  <p class="pitch">Crafting immersive web experiences & atmospheric sound. <span class="accent">FL Studio</span> & <span class="accent">Logic Pro</span> artisan blending code, rhythm, and texture.</p>
+  <p class="type-line" aria-live="polite">I build <span id="typed" class="typed" data-phrases='["web apps","beats","soundscapes","tools"]'></span></p>
         <nav class="primary-nav" aria-label="Primary">
           <ul class="nav-list">
             <li><a href="#about">About</a></li>
@@ -81,6 +82,9 @@
           </a>
         </div>
       </div>
+      <button class="scroll-cue" aria-label="Scroll to About" onclick="document.getElementById('about').scrollIntoView({behavior:'smooth'});" type="button">
+        <span class="chev"></span>
+      </button>
     </header>
     <main id="main" tabindex="-1">
       <section class="panel reveal" id="about">
