--- a/index.html
+++ b/index.html
@@ -114,11 +114,12 @@
       </section>
       <section class="panel reveal" id="contact">
         <h2 class="panel-title">Contact</h2>
-        <form id="contactForm" class="form-grid" autocomplete="off" novalidate action="https://formsubmit.co/aurischlauch@gmail.com" method="POST">
+        <form id="contactForm" class="form-grid" autocomplete="off" novalidate action="https://formsubmit.co/aurischlauch@gmail.com" method="post">
           <input type="hidden" name="_subject" value="New message from aury.bio" />
           <input type="hidden" name="_template" value="table" />
           <input type="hidden" name="_captcha" value="false" />
           <input type="hidden" name="_next" value="thanks.html" />
+          <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off" />
           <label class="field">
             <span>Name</span>
             <input type="text" id="name" name="name" required class="fx-input" placeholder="Your name" />
